--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "sns_app",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "author": "ryo",
   "license": "ISC",
